--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,19 +27,19 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
-      - name: Build appBundle
-        run: flutter build appbundle 
+      # - name: Build appBundle
+      #   run: flutter build appbundle 
       
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Releases
-          path: |
-            build/app/outputs/bundle/release/app-release.aab
+      # - name: Upload Artifacts
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Releases
+      #     path: |
+      #       build/app/outputs/bundle/release/app-release.aab
            
 
-            - name: Build Android AAB
-            run: flutter build appbundle --release
+            # - name: Build Android AAB
+            # run: flutter build appbundle --release
     
       - name: Use Keystore File
         run: |
