--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,10 +49,10 @@ jobs:
 
           
 
-      - name: Sign Android AAB
-        run: |
+      # - name: Sign Android AAB
+      #   run: |
             
-              jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore ${{ secrets.KEYSTORE_FILE }} -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} build/app/outputs/bundle/release/app-release.aab ${{ secrets.KEY_ALIAS }}
+      #         jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore ${{ secrets.KEYSTORE_FILE }} -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} build/app/outputs/bundle/release/app-release.aab ${{ secrets.KEY_ALIAS }}
 
       - name: Build appBundle
         run: flutter build appbundle 
