--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,47 +21,28 @@ jobs:
       - name: Set Up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.6'
+          flutter-version: '3.19.0'
           channel: 'stable' 
       
       - name: Install Dependencies
         run: flutter pub get
+      
+      - name: Build App Bundle
+        run: flutter build appbundle --release
 
+      - name: Upload App Bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-release
+          path: build/app/outputs/bundle/release/app-release.aab
+    
+      # - name: Use Keystore File
+      #   run: |
+      #         echo "${{ secrets.KEYSTORE_PASSWORD }}"
+      #         echo "${{ secrets.KEY_PASSWORD }}"
+      #         echo "${{ secrets.KEYSTORE_FILE }}"
+
+        
       # - name: Build appBundle
       #   run: flutter build appbundle 
-      
-      # - name: Upload Artifacts
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: Releases
-      #     path: |
-      #       build/app/outputs/bundle/release/app-release.aab
-           
 
-            # - name: Build Android AAB
-            # run: flutter build appbundle --release
-    
-      - name: Use Keystore File
-        run: |
-              echo "${{ secrets.KEYSTORE_PASSWORD }}"
-              echo "${{ secrets.KEY_PASSWORD }}"
-              echo "${{ secrets.KEYSTORE_FILE }}"
-
-          
-
-      # - name: Sign Android AAB
-      #   run: |
-            
-      #         jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore ${{ secrets.KEYSTORE_FILE }} -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} build/app/outputs/bundle/release/app-release.aab ${{ secrets.KEY_ALIAS }}
-
-      - name: Build appBundle
-        run: flutter build appbundle 
-
-      # - name: Verify AAB
-      #       run: jarsigner -verify -verbose -certs build/app/outputs/bundle/release/app-release.aab
-    
-      #     - name: Upload AAB artifact
-      #       uses: actions/upload-artifact@v2
-      #       with:
-      #         name: app-release
-      #         path: build/app/outputs/bundle/release/app-release.aab
