--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,12 @@ jobs:
         run: flutter pub get
       
       - name: Build App Bundle
-        run: flutter build appbundle --release
+        run: |
+          flutter build appbundle --release \
+            --keystore="${{ secrets.KEYSTORE_FILE }}" \
+            --keystore-password="${{ secrets.KEYSTORE_PASSWORD }}" \
+            --key-alias="${{ secrets.KEY_ALIAS }}" \
+            --key-password="${{ secrets.KEY_PASSWORD }}"
 
       - name: Upload App Bundle
         uses: actions/upload-artifact@v2
