--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,20 @@
 workflows:
-    sample-workflow:
-        name: Codemagic Sample Workflow
-        max_build_duration: 120
-        instance_type: mac_mini_m2
+  android-workflow:
+    name: Android Workflow
+    environment:
+      android_signing:
+        - flutterdevuikit
+    scripts:
+    - name: Set up local.properties
+      script: | 
+        echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+    - name: Get Flutter packages
+      script: | 
+        flutter packages pub get
+    - name: Build AAB with Flutter
+      script: | 
+        flutter build appbundle --release
+  artifacts:
+    - build/**/outputs/**/*.aab
+    - build/**/outputs/**/mapping.txt
+    - flutter_drive.log
