--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,54 +39,16 @@ workflows:
       - build/**/outputs/**/mapping.txt
       - flutter_drive.log
     publishing:
-      google_play: 
-        # Contents of the JSON key file for Google Play service account saved 
-        # as a secure environment variable
-        credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-
-        # Name of the track internal, alpha, beta, production, internal app sharing,
-        # or your custom track name
-        track: internal
-
-        # Optional Priority of the release (only set if in-app updates are supported)
-        # integer in range [0, 5]
-        in_app_update_priority: 3
-
-        # Optional. Rollout fraction (set only if releasing to a fraction of users)
-        # value between (0, 1)
-        rollout_fraction: 0.25
-
-        # Optional boolean To be used ONLY if your app cannot be sent for review automatically *
-        changes_not_sent_for_review: true
-
-        # Optional boolean. Publish artifacts under a draft release.
-        # Can not be used together with rollout_fraction. Defaults to false
-        submit_as_draft: true
-
-        # Optional. Enable release to be promoted to another track in addition to where it is
-        # originally published.
-        release_promotion:
-
-          # Name of the track to which release is promoted.
-          track: alpha
-
-          # Optional. Rollout fraction (set only if releasing to a fraction of users)
-          # value between (0, 1)
-          rollout_fraction: 0.25
-
-          # Optional boolean. Promote the release as draft.
-          # Can not be used together with rollout_fraction. Defaults to false
-          promote_as_draft: true
       email:
         recipients:
           - hariravi1004@gmail.com
         notify:
           success: true
           failure: false
-      # google_play:
-      #   credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-      #   track: $GOOGLE_PLAY_TRACK
-      #   submit_as_draft: true
+      google_play:
+        credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        track: $GOOGLE_PLAY_TRACK
+        submit_as_draft: true
   # ios-workflow:
   #   name: iOS Workflow
   #   instance_type: mac_mini_m2
