--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -47,7 +47,7 @@ workflows:
           failure: false
       google_play:
         credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-        track: $GOOGLE_PLAY_TRACK
+        track: internal
         submit_as_draft: true
   # ios-workflow:
   #   name: iOS Workflow
