--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -37,7 +37,7 @@ workflows:
         script: |
           BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
           flutter build appbundle --release \
-            --build-name=1.0.$BUILD_NUMBER \
+            --build-name=1.0.7 \
             --build-number=$BUILD_NUMBER
     artifacts:
       - build/**/outputs/**/*.aab
