--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -38,7 +38,7 @@ workflows:
           BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
           flutter build appbundle --release \
             --build-name=1.0.7 \
-            --build-number=$BUILD_NUMBER
+            --build-number=7
     artifacts:
       - build/**/outputs/**/*.aab
       - build/**/outputs/**/mapping.txt
