--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,7 +3,13 @@ workflows:
     name: Android Workflow
     instance_type: mac_mini_m2
     max_build_duration: 120
-   
+    triggering:
+      events:
+        - pull_request
+      branch_patterns:
+        - pattern: 'master'
+          include: true
+          source: true    
     environment:
       groups:
         - google_credentials      
@@ -37,23 +43,23 @@ workflows:
         script: |
           BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
           flutter build appbundle --release \
-            --build-name=1.0.7 \
-            --build-number=7
+            --build-name=1.0.$BUILD_NUMBER \
+            --build-number=$BUILD_NUMBER
     artifacts:
       - build/**/outputs/**/*.aab
       - build/**/outputs/**/mapping.txt
       - flutter_drive.log
-    publishing:
-      email:
-        recipients:
-          - hariravi1004@gmail.com
-        notify:
-          success: true
-          failure: false
-      google_play:
-        credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-        track: production
-        submit_as_draft: false
+    # publishing:
+    #   email:
+    #     recipients:
+    #       - hariravi1004@gmail.com
+    #     notify:
+    #       success: true
+    #       failure: false
+    #   google_play:
+    #     credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+    #     track: production
+    #     submit_as_draft: false
         
   # ios-workflow:
   #   name: iOS Workflow
