--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,7 @@ workflows:
     max_build_duration: 120
     triggering:
       events:
+        - push
         - pull_request
       branch_patterns:
         - pattern: 'master'
