--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,7 @@ workflows:
         - push
         - pull_request
       branch_patterns:
-        - pattern: 'master'
+        - pattern: '*'
           include: true
           source: true    
     environment:
