--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,13 +4,11 @@ workflows:
     instance_type: mac_mini_m2
     max_build_duration: 120
     triggering:
-      events:
-        - push
-        - pull_request
       branch_patterns:
-        - pattern: '*'
-          include: true
-          source: true    
+        - pattern: true
+        - include: true
+          source: true # pr merged
+      cancel_previous_builds: true   
     environment:
       groups:
         - google_credentials      
