--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,10 +4,12 @@ workflows:
     instance_type: mac_mini_m2
     max_build_duration: 120
     triggering:
+      events:
+        - push
       branch_patterns:
-        - pattern: "master"
+        - pattern: '*'
           include: true
-          source: true # pr merged
+          source: true
       cancel_previous_builds: true   
     environment:
       groups:
