--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,16 +1,14 @@
 workflows:
   android-workflow:
     name: Android Workflow
-    instance_type: mac_mini_m2
-    max_build_duration: 120
     triggering:
       events:
         - push
+        - pull_request
       branch_patterns:
         - pattern: '*'
           include: true
-          source: true
-      cancel_previous_builds: true   
+          source: true  
     environment:
       groups:
         - google_credentials      
@@ -26,30 +24,30 @@ workflows:
       #   PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
       #   GOOGLE_PLAY_TRACK: "alpha"
       # flutter: stable
-    scripts:
-      - name: Set up local.properties
-        script: |
-          echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
-      - name: Get Flutter packages
-        script: |
-          flutter packages pub get
-      # - name: Flutter analyze
-      #   script: |
-      #     flutter analyze
-      # - name: Flutter unit tests
-      #   script: |
-      #     flutter test
-      #   ignore_failure: true
-      - name: Build AAB with Flutter
-        script: |
-          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
-          flutter build appbundle --release \
-            --build-name=1.0.$BUILD_NUMBER \
-            --build-number=$BUILD_NUMBER
-    artifacts:
-      - build/**/outputs/**/*.aab
-      - build/**/outputs/**/mapping.txt
-      - flutter_drive.log
+    # scripts:
+    #   - name: Set up local.properties
+    #     script: |
+    #       echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+    #   - name: Get Flutter packages
+    #     script: |
+    #       flutter packages pub get
+    #   # - name: Flutter analyze
+    #   #   script: |
+    #   #     flutter analyze
+    #   # - name: Flutter unit tests
+    #   #   script: |
+    #   #     flutter test
+    #   #   ignore_failure: true
+    #   - name: Build AAB with Flutter
+    #     script: |
+    #       BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
+    #       flutter build appbundle --release \
+    #         --build-name=1.0.$BUILD_NUMBER \
+    #         --build-number=$BUILD_NUMBER
+    # artifacts:
+    #   - build/**/outputs/**/*.aab
+    #   - build/**/outputs/**/mapping.txt
+    #   - flutter_drive.log
     # publishing:
     #   email:
     #     recipients:
