--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,12 +3,12 @@ workflows:
     name: Android Workflow
     triggering:
       events:
-        - push
         - pull_request
       branch_patterns:
-        - pattern: '*'
+        - pattern: 'master'
           include: true
           source: true  
+      cancel_previous_builds: true
     environment:
       groups:
         - google_credentials      
