--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,89 +1,103 @@
 workflows:
-  android-workflow:
-    name: Android Workflow
-    triggering:
-      events:
-        - pull_request
-      branch_patterns:
-        - pattern: 'master'
-          include: true
-          source: true  
-    environment:
-      groups:
-        - google_credentials      
-      android_signing:
-        - flutterdevuikit
-      vars:
-        PACKAGE_NAME: "com.flutterdev.uikit" # <-- Put your actual package name here
-        GOOGLE_PLAY_TRACK: "production"
-      flutter: stable
-      # groups:
-      #   - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
-      # vars:
-      #   PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
-      #   GOOGLE_PLAY_TRACK: "alpha"
-      # flutter: stable
-    # scripts:
-    #   - name: Set up local.properties
-    #     script: |
-    #       echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
-    #   - name: Get Flutter packages
-    #     script: |
-    #       flutter packages pub get
-    #   # - name: Flutter analyze
-    #   #   script: |
-    #   #     flutter analyze
-    #   # - name: Flutter unit tests
-    #   #   script: |
-    #   #     flutter test
-    #   #   ignore_failure: true
-    #   - name: Build AAB with Flutter
-    #     script: |
-    #       BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
-    #       flutter build appbundle --release \
-    #         --build-name=1.0.$BUILD_NUMBER \
-    #         --build-number=$BUILD_NUMBER
-    # artifacts:
-    #   - build/**/outputs/**/*.aab
-    #   - build/**/outputs/**/mapping.txt
-    #   - flutter_drive.log
-    # publishing:
-    #   email:
-    #     recipients:
-    #       - hariravi1004@gmail.com
-    #     notify:
-    #       success: true
-    #       failure: false
-    #   google_play:
-    #     credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-    #     track: production
-    #     submit_as_draft: false
-        
-  # ios-workflow:
-  #   name: iOS Workflow
-  #   instance_type: mac_mini_m2
-  #   max_build_duration: 120
-  #   integrations:
-  #     app_store_connect: codemagic
+  # android-workflow:
+  #   name: Android
+  #   triggering:
+  #     events:
+  #       - push
+  #       - pull_request
+  #     branch_patterns:
+  #       - pattern: 'master'
+  #         include: true
+  #         source: true
+  #     cancel_previous_builds: true
   #   environment:
-  #     ios_signing:
-  #       distribution_type: app_store
-  #       bundle_identifier: io.codemagic.flutteryaml
+  #     groups:
+  #       - google_credentials      
+  #     android_signing:
+  #       - driver_ref
   #     vars:
-  #       APP_ID: 1111111111 # <-- Put your APP ID here
+  #       PACKAGE_NAME: "com.zig.driver" # <-- Put your actual package name here
+  #       GOOGLE_PLAY_TRACK: "production"
   #     flutter: stable
-  #     xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
-  #     cocoapods: default
+  #     # groups:
+  #     #   - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
+  #     # vars:
+  #     #   PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
+  #     #   GOOGLE_PLAY_TRACK: "alpha"
+  #     # flutter: stable
   #   scripts:
-  #     - name: Set up code signing settings on Xcode project
+  #     - name: Set up local.properties
   #       script: |
-  #         xcode-project use-profiles
+  #         echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
   #     - name: Get Flutter packages
   #       script: |
   #         flutter packages pub get
-  #     - name: Install pods
+  #   #   # - name: Flutter analyze
+  #   #   #   script: |
+  #   #   #     flutter analyze
+  #   #   # - name: Flutter unit tests
+  #   #   #   script: |
+  #   #   #     flutter test
+  #   #   #   ignore_failure: true
+  #     - name: Build AAB with Flutter
   #       script: |
-  #         find . -name "Podfile" -execdir pod install \;
+  #         BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
+  #         flutter build appbundle --release --dart-define-from-file=env.json \
+  #           --build-name=1.0.$BUILD_NUMBER \
+  #           --build-number=$BUILD_NUMBER
+
+  #   artifacts:
+  #     - build/**/outputs/**/*.aab
+  #     - build/**/outputs/**/mapping.txt
+  #     - flutter_drive.log
+  #   publishing:
+  #     email:
+  #       recipients:
+  #         - hariravi1004@gmail.com
+  #         - hariharan@zed.digital
+  #         - hari@zed.digital
+  #         - ruban@zeddigital.net
+  #       notify:
+  #         success: true
+  #         failure: true
+  #     google_play:
+  #       credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+  #       track: production
+  #       submit_as_draft: false
+        
+  ios-workflow:
+    name: iOS
+    # integrations: 
+      # app_store_connect: zig_driver
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: 'master'
+          include: true
+          source: true
+      cancel_previous_builds: true
+    # environment:
+      # ios_signing:
+      #   distribution_type: app_store
+      #   bundle_identifier: com.zig.driver
+      #   provisioning_profiles:
+      #     - profile: cicd
+      # vars:
+      #     APP_STORE_APPLE_ID: 6670397561
+      flutter: stable
+      xcode: 16.0 # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
+      cocoapods: default
+    scripts:
+      - name: Get Flutter packages
+        script: |
+          flutter upgrade
+          flutter pub get
+          cd ios
+          pod install  
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles
   #     - name: Flutter analyze
   #       script: |
   #         flutter analyze
@@ -91,45 +105,33 @@ workflows:
   #       script: |
   #         flutter test
   #       ignore_failure: true
-  #     - name: Flutter build ipa and automatic versioning
-  #       script: |
-  #         # See the following link about getting the latest App Store or TestFlight version - https://docs.codemagic.io/knowledge-codemagic/build-versioning/#app-store-or-testflight-latest-build-number
-  #         flutter build ipa --release \
-  #           --build-name=1.0.0 \
-  #           --build-number=$(($(app-store-connect get-latest-testflight-build-number "$APP_ID") + 1)) \
-  #           --export-options-plist=/Users/builder/export_options.plist
-  #   artifacts:
-  #     - build/ios/ipa/*.ipa
-  #     - /tmp/xcodebuild_logs/*.log
-  #     - flutter_drive.log
+      - name: Flutter build ipa and automatic versioning
+        script: |
+             flutter build ipa --release
+    artifacts:
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - flutter_drive.log
   #   publishing:
   #     # See the following link for details about email publishing - https://docs.codemagic.io/publishing-yaml/distribution/#email
   #     email:
   #       recipients:
-  #         - user_1@example.com
-  #         - user_2@example.com
+  #         - hariravi1004@gmail.com
   #       notify:
   #         success: true # To receive a notification when a build succeeds
-  #         failure: false # To not receive a notification when a build fails
-  #     slack:
-  #       # See the following link about how to connect your Slack account - https://docs.codemagic.io/publishing-yaml/distribution/#slack
-  #       channel: "#builds"
-  #       notify_on_build_start: true # To receive a notification when a build starts
-  #       notify:
-  #         success: true # To receive a notification when a build succeeds
-  #         failure: false # To not receive a notification when a build fails
+  #         failure: true # To not receive a notification when a build fails
   #     app_store_connect:
   #       auth: integration
         
-  #       # Configuration related to TestFlight (optional)
-  #       # Note: This action is performed during post-processing.
+  # #       # Configuration related to TestFlight (optional)
+  # #       # Note: This action is performed during post-processing.
   #       submit_to_testflight: true
-  #       beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-  #         - group name 1
-  #         - group name 2
+  # #       beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+  # #         - group name 1
+  # #         - group name 2
 
-  #       # Configuration related to App Store (optional)
-  #       # Note: This action is performed during post-processing.
+  # #       # Configuration related to App Store (optional)
+  # #       # Note: This action is performed during post-processing.
   #       submit_to_app_store: false
 
   # web-workflow:
