--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,161 +1,161 @@
-workflows:
-  # android-workflow:
-  #   name: Android
-  #   triggering:
-  #     events:
-  #       - push
-  #       - pull_request
-  #     branch_patterns:
-  #       - pattern: 'master'
-  #         include: true
-  #         source: true
-  #     cancel_previous_builds: true
-  #   environment:
-  #     groups:
-  #       - google_credentials      
-  #     android_signing:
-  #       - driver_ref
-  #     vars:
-  #       PACKAGE_NAME: "com.zig.driver" # <-- Put your actual package name here
-  #       GOOGLE_PLAY_TRACK: "production"
-  #     flutter: stable
-  #     # groups:
-  #     #   - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
-  #     # vars:
-  #     #   PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
-  #     #   GOOGLE_PLAY_TRACK: "alpha"
-  #     # flutter: stable
-  #   scripts:
-  #     - name: Set up local.properties
-  #       script: |
-  #         echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
-  #     - name: Get Flutter packages
-  #       script: |
-  #         flutter packages pub get
-  #   #   # - name: Flutter analyze
-  #   #   #   script: |
-  #   #   #     flutter analyze
-  #   #   # - name: Flutter unit tests
-  #   #   #   script: |
-  #   #   #     flutter test
-  #   #   #   ignore_failure: true
-  #     - name: Build AAB with Flutter
-  #       script: |
-  #         BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
-  #         flutter build appbundle --release --dart-define-from-file=env.json \
-  #           --build-name=1.0.$BUILD_NUMBER \
-  #           --build-number=$BUILD_NUMBER
+# workflows:
+#   # android-workflow:
+#   #   name: Android
+#   #   triggering:
+#   #     events:
+#   #       - push
+#   #       - pull_request
+#   #     branch_patterns:
+#   #       - pattern: 'master'
+#   #         include: true
+#   #         source: true
+#   #     cancel_previous_builds: true
+#   #   environment:
+#   #     groups:
+#   #       - google_credentials      
+#   #     android_signing:
+#   #       - driver_ref
+#   #     vars:
+#   #       PACKAGE_NAME: "com.zig.driver" # <-- Put your actual package name here
+#   #       GOOGLE_PLAY_TRACK: "production"
+#   #     flutter: stable
+#   #     # groups:
+#   #     #   - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
+#   #     # vars:
+#   #     #   PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
+#   #     #   GOOGLE_PLAY_TRACK: "alpha"
+#   #     # flutter: stable
+#   #   scripts:
+#   #     - name: Set up local.properties
+#   #       script: |
+#   #         echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+#   #     - name: Get Flutter packages
+#   #       script: |
+#   #         flutter packages pub get
+#   #   #   # - name: Flutter analyze
+#   #   #   #   script: |
+#   #   #   #     flutter analyze
+#   #   #   # - name: Flutter unit tests
+#   #   #   #   script: |
+#   #   #   #     flutter test
+#   #   #   #   ignore_failure: true
+#   #     - name: Build AAB with Flutter
+#   #       script: |
+#   #         BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
+#   #         flutter build appbundle --release --dart-define-from-file=env.json \
+#   #           --build-name=1.0.$BUILD_NUMBER \
+#   #           --build-number=$BUILD_NUMBER
 
-  #   artifacts:
-  #     - build/**/outputs/**/*.aab
-  #     - build/**/outputs/**/mapping.txt
-  #     - flutter_drive.log
-  #   publishing:
-  #     email:
-  #       recipients:
-  #         - hariravi1004@gmail.com
-  #         - hariharan@zed.digital
-  #         - hari@zed.digital
-  #         - ruban@zeddigital.net
-  #       notify:
-  #         success: true
-  #         failure: true
-  #     google_play:
-  #       credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
-  #       track: production
-  #       submit_as_draft: false
+#   #   artifacts:
+#   #     - build/**/outputs/**/*.aab
+#   #     - build/**/outputs/**/mapping.txt
+#   #     - flutter_drive.log
+#   #   publishing:
+#   #     email:
+#   #       recipients:
+#   #         - hariravi1004@gmail.com
+#   #         - hariharan@zed.digital
+#   #         - hari@zed.digital
+#   #         - ruban@zeddigital.net
+#   #       notify:
+#   #         success: true
+#   #         failure: true
+#   #     google_play:
+#   #       credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+#   #       track: production
+#   #       submit_as_draft: false
         
-  ios-workflow:
+#   ios-workflow:
     
-    name: iOS
-    # integrations: 
-      # app_store_connect: zig_driver
-    triggering:
-      events:
-        - push
-      branch_patterns:
-        - pattern: 'master'
-          include: true
-          source: true
-      cancel_previous_builds: true
-    # environment:
-      # ios_signing:
-      #   distribution_type: app_store
-      #   bundle_identifier: com.zig.driver
-      #   provisioning_profiles:
-      #     - profile: cicd
-      # vars:
-      #     APP_STORE_APPLE_ID: 6670397561
-    scripts:
-      - name: Get Flutter packages
-        script: |
-          flutter pub get
-          find . -name "Podfile" -execdir pod install \;  
-      - name: Set up code signing settings on Xcode project
-        script: |
-          xcode-project use-profiles
-  #     - name: Flutter analyze
-  #       script: |
-  #         flutter analyze
-  #     - name: Flutter unit tests
-  #       script: |
-  #         flutter test
-  #       ignore_failure: true
-      - name: Flutter build ipa and automatic versioning
-        script: |
-             flutter build ipa --release
-    artifacts:
-      - build/ios/ipa/*.ipa 
-      - /tmp/xcodebuild_logs/*.log
-      - flutter_drive.log
-  #   publishing:
-  #     # See the following link for details about email publishing - https://docs.codemagic.io/publishing-yaml/distribution/#email
-  #     email:
-  #       recipients:
-  #         - hariravi1004@gmail.com
-  #       notify:
-  #         success: true # To receive a notification when a build succeeds
-  #         failure: true # To not receive a notification when a build fails
-  #     app_store_connect:
-  #       auth: integration
+#     name: iOS
+#     # integrations: 
+#       # app_store_connect: zig_driver
+#     triggering:
+#       events:
+#         - push
+#       branch_patterns:
+#         - pattern: 'master'
+#           include: true
+#           source: true
+#       cancel_previous_builds: true
+#     # environment:
+#       # ios_signing:
+#       #   distribution_type: app_store
+#       #   bundle_identifier: com.zig.driver
+#       #   provisioning_profiles:
+#       #     - profile: cicd
+#       # vars:
+#       #     APP_STORE_APPLE_ID: 6670397561
+#     scripts:
+#       - name: Get Flutter packages
+#         script: |
+#           flutter pub get
+#           find . -name "Podfile" -execdir pod install \;  
+#       - name: Set up code signing settings on Xcode project
+#         script: |
+#           xcode-project use-profiles
+#   #     - name: Flutter analyze
+#   #       script: |
+#   #         flutter analyze
+#   #     - name: Flutter unit tests
+#   #       script: |
+#   #         flutter test
+#   #       ignore_failure: true
+#       - name: Flutter build ipa and automatic versioning
+#         script: |
+#              flutter build ipa --release
+#     artifacts:
+#       - build/ios/ipa/*.ipa 
+#       - /tmp/xcodebuild_logs/*.log
+#       - flutter_drive.log
+#   #   publishing:
+#   #     # See the following link for details about email publishing - https://docs.codemagic.io/publishing-yaml/distribution/#email
+#   #     email:
+#   #       recipients:
+#   #         - hariravi1004@gmail.com
+#   #       notify:
+#   #         success: true # To receive a notification when a build succeeds
+#   #         failure: true # To not receive a notification when a build fails
+#   #     app_store_connect:
+#   #       auth: integration
         
-  # #       # Configuration related to TestFlight (optional)
-  # #       # Note: This action is performed during post-processing.
-  #       submit_to_testflight: true
-  # #       beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-  # #         - group name 1
-  # #         - group name 2
+#   # #       # Configuration related to TestFlight (optional)
+#   # #       # Note: This action is performed during post-processing.
+#   #       submit_to_testflight: true
+#   # #       beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+#   # #         - group name 1
+#   # #         - group name 2
 
-  # #       # Configuration related to App Store (optional)
-  # #       # Note: This action is performed during post-processing.
-  #       submit_to_app_store: false
+#   # #       # Configuration related to App Store (optional)
+#   # #       # Note: This action is performed during post-processing.
+#   #       submit_to_app_store: false
 
-  # web-workflow:
-  #   name: Web app workflow
-  #   max_build_duration: 10
-  #   environment:
-  #     flutter: stable
-  #   scripts:
-  #     - name: Get Flutter packages
-  #       script: |
-  #         flutter packages pub get
-  #     - name: Flutter analyze
-  #       script: |
-  #         flutter analyze
-  #     - name: Flutter unit tests
-  #       script: |
-  #         flutter test
-  #     - name: Flutter build webapp
-  #       script: |
-  #         flutter build web --release
-  #         cd build/web
-  #         7z a -r ../web.zip ./*
-  #   artifacts:
-  #     - build/web.zip
-  #     - flutter_drive.log
-  #   publishing:
-  #     email:
-  #       recipients:
-  #         - user_1@example.com
+#   # web-workflow:
+#   #   name: Web app workflow
+#   #   max_build_duration: 10
+#   #   environment:
+#   #     flutter: stable
+#   #   scripts:
+#   #     - name: Get Flutter packages
+#   #       script: |
+#   #         flutter packages pub get
+#   #     - name: Flutter analyze
+#   #       script: |
+#   #         flutter analyze
+#   #     - name: Flutter unit tests
+#   #       script: |
+#   #         flutter test
+#   #     - name: Flutter build webapp
+#   #       script: |
+#   #         flutter build web --release
+#   #         cd build/web
+#   #         7z a -r ../web.zip ./*
+#   #   artifacts:
+#   #     - build/web.zip
+#   #     - flutter_drive.log
+#   #   publishing:
+#   #     email:
+#   #       recipients:
+#   #         - user_1@example.com
 
 
